fix: cards style on clothes page
it took me too long to fix

--- a/src/app/widgets/clothes-page/clothes-feed/clothes-feed.component.scss
+++ b/src/app/widgets/clothes-page/clothes-feed/clothes-feed.component.scss
@@ -10,14 +10,15 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 22px;
+        // gap: 22px;
         
         .card {
             padding: 12px;
 
-            width: 40%;
-            min-width: 280px;
+            width: 50%;
             height: 450px;
+
+            box-sizing: border-box;
         }
     }
 }
