--- a/src/app/widgets/clothes-page/clothes-feed/ui/clothes-card/clothes-card.component.scss
+++ b/src/app/widgets/clothes-page/clothes-feed/ui/clothes-card/clothes-card.component.scss
@@ -14,13 +14,12 @@
 
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 
-
-    a {
+    .picture {
         width: 100%;
         height: 100%;
-
-        .picture {
+        a {
             width: 100%;
             height: 100%;
     
@@ -32,6 +31,7 @@
             }
         }
     }
+    
     .info {
         display: flex;
         flex-direction: column;
